# fasttube

./: .env  .gitignore  Dockerfile  Dockerfile.test  LICENSE.md  Makefile  README.md  alembic.ini  deploy.sh  docker-compose.dev.yml  docker-compose.test.yml  pyproject.toml  requirements.txt  run.py
.github/workflows/: deploy.yml
bot/: Dockerfile  Makefile  config.py  docker-compose.dev.yml  pyproject.toml  run.py  token.pickle
bot/src/: config.py  handlers.py  keyboards.py  run.py  states.py  utils.py
bot/src/handlers/: create_video.py  newsletter.py  profile.py  security.py  youtube.py
bot/src/keyboards/: check_subscribe.py  menu.py  screen_resolutions.py  settings.py
bot/src/middlewares/: auth.py  user.py
bot/src/utils/: crud.py  file_actions.py  moviepy.py  permissions.py  youtube.py
db/postgres/global/: 1260  pg_control  pg_internal.init
db/postgres/pg_stat/: pgstat.stat
media/temp-audio/: temp_audio_075900f9-8ee1-4590-a45f-ce54caeb069a
media/temp-photo/: temp_photo_ee2f5953-e420-4e7a-b177-440d6070b2e8
migrations/: env.py
migrations/versions/: 898e8b6b1f0d_fssfdsd.py  d1a11e847149_fssfdsd.py  d9397751f9f9_fssfdsd.py
server/: Dockerfile  Dockerfile.test  Makefile  docker-compose.dev.yml  docker-compose.test.yml  pyproject.toml
server/migrations/: env.py
server/migrations/versions/: 1145172e53a6_fssfdsd.py  3b203e242c7d_fssfdsd.py
server/src/: config.py
server/src/api/: app.py
src/: config.py  handlers.py  keyboards.py  run.py  states.py  utils.py
src/handlers/: __init__.py  create_video.py  help.py  newsletter.py  setup.py  start.py  youtube.py
src/keyboards/: check_subscribe.py  emoji.py  main.py  menu.py  screen_resolutions.py  settings.py
src/middlewares/: auth.py  error.py  user.py
src/models/: base.py  user.py
src/repositories/: auth.py  database.py
src/utils/: file_actions.py  moviepy.py  permissions.py
src/yt/: utils.py
(+19 files in other folders)
